Изменения тестов + отчет